# sincos

./: CMakeLists.txt  README.md  test.cpp
libraries/libC/: sincos.c  sincos.h
libraries/libCPP/: sincosCpp.cpp  sincosCpp.hpp
