cmake_minimum_required(VERSION 3.9)
project(myapp VERSION 1.0.1)
include(GNUInstallDirs)

# TEST LIBRARY
set(SOURCE_FILES test.cpp)
add_executable(${PROJECT_NAME} ${SOURCE_FILES})

# Set output folder
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/bin)

# INSTALL LIBC
FILE(GLOB LC_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libraries/libC/*.c)
FOREACH(lc_src ${LC_SRCS})
	GET_FILENAME_COMPONENT(basename ${lc_src} NAME_WE)
	ADD_LIBRARY(${basename} SHARED ${lc_src})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${basename})
	TARGET_INCLUDE_DIRECTORIES(${basename} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libraries/libC)
ENDFOREACH()

# INSTALL LIBC++
FILE(GLOB LCPP_SRCS ${CMAKE_CURRENT_SOURCE_DIR}/libraries/libCPP/*.cpp)
FOREACH(lcpp_src ${LCPP_SRCS})
	GET_FILENAME_COMPONENT(basename ${lcpp_src} NAME_WE)
	ADD_LIBRARY(${basename} SHARED ${lcpp_src})
	TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${basename})
	TARGET_INCLUDE_DIRECTORIES(${basename} PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/libraries/libCPP)
ENDFOREACH()

